[tool.poetry]
name = "renovate-poetry-ensurepip-not-available"
version = "0.1.0"
description = ""
authors = ["Markus Zapke-Gründemann"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
